working on iOS zoom issue

--- a/src/app/components/create-new-todo/create-new-todo.component.css
+++ b/src/app/components/create-new-todo/create-new-todo.component.css
@@ -437,6 +437,7 @@ input[type=number] {
   }
 
   .titleCont input {
+    font-weight: normal !important;
     background-color: #151515 !important;
     width: 60% !important;
   }
@@ -570,7 +571,7 @@ input[type=number] {
     color: #fff;
     padding: 0 3vw;
     font-size: 1rem;
-    font-weight: 500;
+    font-weight: normal !important;
   }
 
   .top button,
@@ -628,7 +629,7 @@ input[type=number] {
   .todoItem {
     width: 80%;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     gap: 1vw;
   }
@@ -655,15 +656,22 @@ input[type=number] {
   }
 
   .editInput {
-    width: 90%;
+    width: 75%;
     resize: vertical;
     outline: none;
     border: none;
-    font-size: 1rem;
+    font-size: 3vw;
     background-color: transparent;
     border-bottom: 1px solid #fff;
     color: #fff;
     font-weight: 500;
+    padding-right: 2px;
+    transition: 0.15s ease-in-out;
+  }
+
+  .editInput:focus {
+    font-size: 1rem;
+    width: 65%;
   }
 
   .editInput::-webkit-scrollbar {
@@ -671,7 +679,7 @@ input[type=number] {
   }
 
   .todoOpt {
-    width: 30%;
+    width: 25%;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -706,6 +714,7 @@ input[type=number] {
     padding: 0.4vw 0.7vw;
     font-size: 3vw;
     border-radius: 1vw;
+    min-width: fit-content;
   }
 
   .editTodo:hover {
@@ -731,15 +740,23 @@ input[type=number] {
   }
 
   .expenseAmountEditInput {
-    text-align: center;
-    font-size: 1rem;
+    width: 25%;
+    text-align: left;
+    font-size: 3vw;
     border-radius: 6px;
     padding: 0.4vw 1vw;
+    transition: 0.15s ease-in-out;
+  }
+  
+  .expenseAmountEditInput:focus {
+    font-size: 1rem;
+    width: 34%;
+    margin-left: 1%;
   }
 
   .expenseAmountInput {
-    text-align: center;
-    width: 21% !important;
+    text-align: left;
+    width: 22% !important;
   }
 
   .totalExpense {
